@startuml

title __PLUGIN's Class Diagram__\n

  namespace org.factcast.schema.registry.plugin {
    class org.factcast.schema.registry.plugin.BuildMojo {
        - outputDirectory : File
        - sourceDirectory : File
        + execute()
    }
  }
  

  namespace org.factcast.schema.registry.plugin {
    class org.factcast.schema.registry.plugin.ValidateMojo {
        - sourceDirectory : File
        + execute()
    }
  }
  

  org.factcast.schema.registry.plugin.BuildMojo -up-|> org.apache.maven.plugin.AbstractMojo
  org.factcast.schema.registry.plugin.ValidateMojo -up-|> org.apache.maven.plugin.AbstractMojo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
